data/contextbench_phase1/stripped/generated_memory_text_from_stripped_adp/000088_464341c0-9d59-4b87-acba-38442e10d419.txt
PRIOR EXPERIENCE MEMORY
This is read-only prior trajectory evidence for OpenHands.
Use it as context only; verify all behavior in the current workspace.

SOURCE
------
- trajectory_id: 464341c0-9d59-4b87-acba-38442e10d419
- repo: sphinx-doc/sphinx
- instance_id: sphinx-doc__sphinx-8713
- base_commit: 3ed7590ed411bd93b26098faab4f23619cdb2267
- model: claude-sonnet-4-5-20250929

PRIOR PROBLEM
-------------
napoleon_use_param should also affect "other parameters" section
Subject: napoleon_use_param should also affect "other parameters" section

### Problem
Currently, napoleon always renders the Other parameters section as if napoleon_use_param was False, see source
```
    def _parse_other_parameters_section(self, section):
        # type: (unicode) -> List[unicode]
        return self._format_fields(_('Other Parameters'), self._consume_fields())

    def _parse_parameters_section(self, section):
        # type: (unicode) -> List[unicode]
        fields = self._consume_fields()
        if self._config.napoleon_use_param:
            return self._format_docutils_params(fields)
        else:
            return self._format_fields(_('Parameters'), fields)
```
whereas it would make sense that this section should follow the same formatting rules as the Parameters section.

#### Procedure to reproduce the problem
```
In [5]: print(str(sphinx.ext.napoleon.NumpyDocstring("""\
   ...: Parameters
   ...: ----------
   ...: x : int
   ...:
   ...: Other parameters
   ...: ----------------
   ...: y: float
   ...: """)))
:param x:
:type x: int

:Other Parameters: **y** (*float*)
```

Note the difference in rendering.

#### Error logs / results
See above.

#### Expected results
```
:param x:
:type x: int

:Other Parameters:  // Or some other kind of heading.
:param: y
:type y: float
```

Alternatively another separate config value could be introduced, but that seems a bit overkill.

### Reproducible project / your project
N/A

### Environment info
- OS: Linux
- Python version: 3.7
- Sphinx version: 1.8.1

FILES INSPECTED
---------------
- sphinx/ext/napoleon [Grep: 1]
- sphinx/ext/napoleon/docstring.py [Read: 2]
- tests [Grep: 2]

SEARCH ANCHORS
--------------
- [4] Glob glob='**/napoleon/**/*.py'
- [6] Grep pattern='_parse_other_parameters_section' path='sphinx/ext/napoleon'
- [21] Grep pattern='other.parameters' path='tests'
- [23] Grep pattern='Other Parameters' path='tests'

TEST / DIAGNOSTIC / OTHER COMMANDS
----------------------------------
- [other/reproduction]
- [diagnostic] ls setup.py
- [test] python test_issue.py
- [other/reproduction] python --version
- [test] python3 test_issue.py
- [diagnostic] find . -type f -name "*test*napoleon*" -o -name "*napoleon*test*" | grep -E "\.py$" | head -10
- [test] python3 -m pytest tests/test_ext_napoleon_docstring.py -v

OBSERVED TEST / RUNTIME FAILURES
--------------------------------
- Traceback (most recent call last):

RELEVANT OBSERVATION EXCERPTS
-----------------------------
- [Diagnostic Output after action #2]
  setup.py
- [Glob Result after action #4]
  ./swebench_9_15/testbed/sphinx/ext/napoleon/__init__.py
  ./swebench_9_15/testbed/sphinx/ext/napoleon/docstring.py
  ./swebench_9_15/testbed/sphinx/ext/napoleon/iterators.py
- [Grep Result after action #6]
  sphinx/ext/napoleon/docstring.py:175:                'other parameters': self._parse_other_parameters_section,
  sphinx/ext/napoleon/docstring.py:684:    def _parse_other_parameters_section(self, section: str) -> List[str]:
- [Read Result after action #8]
       1→"""
       2→    sphinx.ext.napoleon.docstring
       3→    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
       4→
       5→
       6→    Classes for docstring parsing and formatting.
       7→
       8→
       9→    :copyright: Copyright 2007-2021 by the Sphinx team, see AUTHORS.
      10→    :license: BSD, see LICENSE for details.
      11→"""
      12→
      13→import collections
      14→import inspect
      15→import re
      16→from functools import partial
      17→from typing import Any, Callable, Dict, List, Tuple, Type, Union
      18→
      19→from sphinx.application import Sphinx
      20→from sphinx.config import Config as SphinxConfig
      21→from sphinx.ext.napoleon.iterators import modify_iter
      22→from sphinx.locale import _, __
      23→from sphinx.util import logging
      24→from sphinx.util.inspect import stringify_annotation
      25→from sphinx.util.typing import get_type_hints
      26→
      27→logger = logging.getLogger(__name__)
      28→
      29→_directive_regex = re.compile(r'\.\. \S+::')
      30→_google_section_regex = re.compile(r'^(\s|\w)+:\s*$')
      31→_google_typed_arg_regex = re.compile(r'(.+?)\(\s*(.*[^\s]+)\s*\)')
      32→_numpy_section_regex = re.compile(r'^[=\-`:\'"~^_*+#<>]{2,}\s*$')
      33→_single_co
  [... truncated ...]
- [Read Result after action #10]
     684→    def _parse_other_parameters_section(self, section: str) -> List[str]:
     685→        return self._format_fields(_('Other Parameters'), self._consume_fields())
     686→
     687→    def _parse_parameters_section(self, section: str) -> List[str]:
     688→        if self._config.napoleon_use_param:
     689→            # Allow to declare multiple parameters at once (ex: x, y: int)
     690→            fields = self._consume_fields(multiple=True)
     691→            return self._format_docutils_params(fields)
     692→        else:
     693→            fields = self._consume_fields()
     694→            return self._format_fields(_('Parameters'), fields)
     695→
     696→    def _parse_raises_section(self, section: str) -> List[str]:
     697→        fields = self._consume_fields(parse_type=False, prefer_type=True)
     698→        lines = []  # type: List[str]

- [Test Output after action #13]
  Exit code 1
  Traceback (most recent call last):
    File "test_issue.py", line 4, in <module>
      import sphinx.ext.napoleon
    File "./swebench_9_15/testbed/sphinx/__init__.py", line 20, in <module>
      from .deprecation import RemovedInNextVersionWarning
    File "./swebench_9_15/testbed/sphinx/deprecation.py", line 32
      def deprecated_alias(modname: str, objects: Dict[str, object],
                                  ^
  SyntaxError: invalid syntax
- [Test Output after action #17]
  ================================================================================
  Test 1: NumpyDocstring with napoleon_use_param=True
  ================================================================================

  :param x:
  :type x: int

  :param y:
  :type y: float


  ================================================================================
  Test 2: NumpyDocstring with napoleon_use_param=False
  ================================================================================

  :Parameters: **x** (*int*)

  :Other Parameters: **y** (*float*)


  ================================================================================
  Test 3: GoogleDocstring with napoleon_use_param=True
  ================================================================================

  :param x: Description of x
  :type x: int

  :param y: Description of y
  :type y: float


  ================================================================================
  Test 4: Multiple parameters with napoleon_use_param=True
  ================================================================================

  :param x: Description of x and z
  :type x: int
  :param z: Description of x and z
  :type z: int

  :param y: Description of y and w
  :type
  [... truncated ...]
- [Diagnostic Output after action #19]
  ./tests/test_ext_napoleon.py
  ./tests/test_ext_napoleon_docstring.py
  ./tests/test_ext_napoleon_iterators.py
- [Grep Result after action #21]
  No matches found
- [Grep Result after action #23]
  No matches found
- [Test Output after action #25]
  ============================= test session starts ==============================
  platform darwin -- Python 3.8.8, pytest-8.3.5, pluggy-1.5.0 -- /opt/anaconda3/bin/python3
  cachedir: .pytest_cache
  hypothesis profile 'default' -> database=DirectoryBasedExampleDatabase(PosixPath('./swebench_9_15/testbed/.hypothesis/examples'))
  libraries: Sphinx-4.0.0+/3ed7590ed, docutils-0.17.1
  base tempdir: /private/var/folders/hg/_103_7xx52701ztpt4713nww0000gn/T/pytest-of-user/pytest-127
  rootdir: ./swebench_9_15/testbed
  configfile: setup.cfg
  plugins: hypothesis-6.113.0, anyio-3.6.2, xdist-3.6.1
  collecting ... collected 47 items

  tests/test_ext_napoleon_docstring.py::NamedtupleSubclassTest::test_attributes_docstring PASSED [  2%]
  tests/test_ext_napoleon_docstring.py::InlineAttributeTest::test_class_data_member PASSED [  4%]
  tests/test_ext_napoleon_docstring.py::InlineAttributeTest::test_class_data_member_inline PASSED [  6%]
  tests/test_ext_napoleon_docstring.py::InlineAttributeTest::test_class_data_member_inline_no_type PASSED [  8%]
  tests/test_ext_napoleon_docstring.py::InlineAttributeTest::test_class_data_member_inline_ref_in_type PASSED [ 10%]
  tests/test_ext_napoleon_docstring.py::GoogleDocstringTe
  [... truncated ...]

SOURCE EDIT EVIDENCE
--------------------
- sphinx/ext/napoleon/docstring.py
  Tool: Edit action #12
  old_text_sha256: d42441ae9bffd34b387a9002b1455bd8e5eead14a6776f12cc672522d7acc033
  new_text_sha256: 9333400603e00fb212982112994cb704169b5df9666e78e867db95441c54371a

PRIOR AGENT FINAL MESSAGE
-------------------------
(none)

INJECTION WARNING
-----------------
This memory is from a prior related issue. Use it as evidence only. Do not copy patches blindly.
